# carbon

./: .gitignore
docs/: 20251126-unified-integration-implementation-summary.md  20251126-unified-pipeline-missing-link.md  20251126-unified-streamer-grpc-debug.md  20251127-solflow-vs-carbon-architecture-review.md
examples/solflow/: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  test_aggregator_sqlite.rs
examples/solflow/.cursor/plans/: next-js-frontend-with-blocking-7982c666.plan.md  next-js-frontend-with-blocking-96d03758.plan.md
examples/solflow/docs/: 20250115-frontend-architecture-analysis.md  20251113-1130-aggregator-sqlite-backend-implementation.md  20251113T08-architecture-grpc-verify.md  20251113T08-architecture-streamer-system.md  20251113T08-checklist-compile-run-validate.md  20251113T08-examples-comparative-review.md  20251113T08-run-topology-diagram.md  20251113T08-streamer-patterns-and-extension.md  20251113T10-architecture-aggregator-enrichment.md  20251113T13-aggregator-sqlite-reader-migration.md  20251113T14-architecture-sqlite-backend.md  20251113T17-phase3-signals-analytics-binary.md  20251114-phase4-activation-layer-implementation.md  20251114T18-feature-pipeline-architecture-review.md  20251118T1200-ui-modernization-implementation.md  20251119T0800-architectural-review.md  20251119T17-dca-sparkline-implementation.md  20251120-batched-dashboard-architecture.md  20251120-modal-batched-data-migration.md  20251125-solflow-program-and-decoder-summary.md  20251126-unified-instruction-scanner-architecture.md  20251127-solflow-end-to-end-architecture-review.md  20252025-11-19T00-ngrok-proxy-analysis.md  20252025-11-20T00-frontend-architecture-ui-api-split-analysis.md  FRONTEND_ARCHITECTURE.md  FRONTEND_QUICK_START.md  README_ARCHITECTURE.md  UNIFIED_STREAMER_USAGE.md  mint-trace-self-review.md  mint-trace-usage.md  unified-dex-mint-flow.md
examples/solflow/docs/pipeline/: pipeline_backpressure_and_flush_optimization.md
examples/solflow/frontend/app/: layout.tsx  page.tsx
examples/solflow/frontend/app/api/dashboard/: route.ts
examples/solflow/frontend/app/api/dca-sparkline/[mint]/: route.ts
examples/solflow/frontend/app/api/metadata/block/: route.ts
examples/solflow/frontend/app/api/metadata/blocked/: route.ts
examples/solflow/frontend/app/api/metadata/counts/: route.ts
examples/solflow/frontend/app/api/metadata/follow/: route.ts
examples/solflow/frontend/app/api/metadata/followed/: route.ts
examples/solflow/frontend/app/api/metadata/get/: route.ts
examples/solflow/frontend/app/api/metadata/refresh-followed/: route.ts
examples/solflow/frontend/app/api/metadata/unblock/: route.ts
examples/solflow/frontend/app/api/metadata/update/: route.ts
examples/solflow/frontend/app/api/signal-summary/[mint]/: route.ts
examples/solflow/frontend/app/api/signal-summary/all/: route.ts
examples/solflow/frontend/app/api/signal-summary/upsert/: route.ts
examples/solflow/frontend/app/api/sparkline/[mint]/: route.ts
examples/solflow/frontend/app/api/tokens/: route.ts
examples/solflow/frontend/app/api/tokens/[mint]/block/: route.ts
examples/solflow/frontend/app/api/tokens/[mint]/signal/: route.ts
examples/solflow/frontend/app/api/tokens/[mint]/unblock/: route.ts
examples/solflow/frontend/app/components/: BlockButton.tsx  BlockedTokensModal.tsx  DcaSparkline.tsx  FollowedTokensModal.tsx  NetFlowSparkline.tsx  PersistenceLegend.tsx  SignalsLegend.tsx  SolPriceHeader.tsx  TokenDashboard.tsx
examples/solflow/frontend/components/ui/: badge.tsx
examples/solflow/frontend/docs/: VERIFICATION_CHECKLIST.md  followed-token-auto-refresh.md  followed-tokens-modal-ui-improvements.md
examples/solflow/frontend/lib/: dashboard-client.ts  db.ts  queries.ts  sol-price.ts  types.ts  use-followed-token-refresh.ts
examples/solflow/meta_analysis/: README.md
examples/solflow/meta_analysis/streamers/: bonkswap_meta.rs  jupiter_dca_meta.rs  moonshot_meta.rs  pumpswap_meta.rs
examples/solflow/sql/: 00_token_metadata.sql  02_token_aggregates.sql  05_token_metadata_enhanced.sql  07_token_signal_summary.sql  07_token_signal_summary_postgres.sql  readme.md
examples/solflow/src/: aggregator.rs  config.rs  empty_decoder.rs  instruction_scanner.rs  main.rs  persistence.rs  sqlite_pragma.rs  state.rs  tests.rs  trade_extractor.rs
examples/solflow/src/aggregator_core/: correlator.rs  detector.rs  jsonl_writer.rs  mod.rs  normalizer.rs  reader.rs  scorer.rs  sqlite_reader.rs  sqlite_writer.rs  window.rs  writer.rs  writer_backend.rs
examples/solflow/src/meta_analysis/: capture_processor.rs  mod.rs  types.rs
examples/solflow/src/pipeline/: blocklist.rs  config.rs  db.rs  dexscreener.rs  engine.rs  ingestion.rs  mod.rs  persistence_scorer.rs  scheduler.rs  signals.rs  state.rs  types.rs  windows.rs
examples/solflow/src/streamer_core/: balance_extractor.rs  blocklist_checker.rs  config.rs  error_handler.rs  grpc_client.rs  lib.rs  mod.rs  output_writer.rs  sqlite_writer.rs  trade_detector.rs  writer_backend.rs
examples/solflow/src/ui/: layout.rs  mod.rs  renderer.rs  terminal.rs
examples/solflow/streams/aggregates/: 15m.jsonl  1h.jsonl  2h.jsonl  4h.jsonl
examples/solflow/streams/bonkswap/: events.jsonl
examples/solflow/streams/jupiter_dca/: events.jsonl
examples/solflow/tests/: test_dual_channel_streamer.rs  test_pipeline_integration.rs  test_signal_summary_phase1.sh
